--- a/index.html
+++ b/index.html
@@ -3,12 +3,32 @@
     <script src="p5.dom.min.js"></script>
     <script src="p5.sound.min.js"></script>
 <script src="./p5.play.js"></script>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-database.js"></script>
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyCvY1WE5lCYBIMRI-8tSqpRVQmydiD69V4",
+    authDomain: "pilot-d9ef4.firebaseapp.com",
+    databaseURL: "https://pilot-d9ef4-default-rtdb.firebaseio.com",
+    projectId: "pilot-d9ef4",
+    storageBucket: "pilot-d9ef4.appspot.com",
+    messagingSenderId: "477069691005",
+    appId: "1:477069691005:web:c6a7d1c68faed115390914"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
   </head>
   <body>
       <script src="sketch.js"></script>
-  
+    <script src="Game.js"></script>
 
 </body></html>
